// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkNudger should render as a configurable nudger correctly 1`] = `
<div
  className="bpk-nudger"
>
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Decrease"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
        />
      </svg>
    </span>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input"
    id="nudger"
    readOnly={true}
    type="text"
    value="premium"
  />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Increase"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`BpkNudger should render as an outline nudger correctly 1`] = `
<div
  className="bpk-nudger"
>
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--outline bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Decrease"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
        />
      </svg>
    </span>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input bpk-nudger__input--numeric bpk-nudger__input--outline"
    id="nudger"
    readOnly={true}
    type="text"
    value="2"
  />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--outline bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Increase"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`BpkNudger should render correctly 1`] = `
<div
  className="bpk-nudger"
>
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Decrease"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
        />
      </svg>
    </span>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input bpk-nudger__input--numeric"
    id="nudger"
    readOnly={true}
    type="text"
    value="2"
  />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Increase"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`BpkNudger should render correctly with a "className" attribute 1`] = `
<div
  className="bpk-nudger my-nudger"
>
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Decrease"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
        />
      </svg>
    </span>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input bpk-nudger__input--numeric"
    id="nudger"
    readOnly={true}
    type="text"
    value="2"
  />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Increase"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`BpkNudger should render correctly with a value < min 1`] = `
<div
  className="bpk-nudger"
>
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={true}
    onClick={[Function]}
    title="Decrease"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon bpk-nudger__icon--disabled"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
        />
      </svg>
    </span>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input bpk-nudger__input--numeric"
    id="nudger"
    readOnly={true}
    type="text"
    value="0"
  />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Increase"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`BpkNudger should render correctly with a value = max 1`] = `
<div
  className="bpk-nudger"
>
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Decrease"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
        />
      </svg>
    </span>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input bpk-nudger__input--numeric"
    id="nudger"
    readOnly={true}
    type="text"
    value="9"
  />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={true}
    onClick={[Function]}
    title="Increase"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon bpk-nudger__icon--disabled"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`BpkNudger should render correctly with a value = min 1`] = `
<div
  className="bpk-nudger"
>
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={true}
    onClick={[Function]}
    title="Decrease"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon bpk-nudger__icon--disabled"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
        />
      </svg>
    </span>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input bpk-nudger__input--numeric"
    id="nudger"
    readOnly={true}
    type="text"
    value="1"
  />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Increase"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`BpkNudger should render correctly with a value > max 1`] = `
<div
  className="bpk-nudger"
>
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={false}
    onClick={[Function]}
    title="Decrease"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.5 12A1.5 1.5 0 0 1 3 10.5h18a1.5 1.5 0 0 1 0 3H3A1.5 1.5 0 0 1 1.5 12z"
        />
      </svg>
    </span>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input bpk-nudger__input--numeric"
    id="nudger"
    readOnly={true}
    type="text"
    value="10"
  />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
    disabled={true}
    onClick={[Function]}
    title="Increase"
    type="button"
  >
    <span
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1.125rem",
          "marginTop": "0.1875rem",
          "verticalAlign": "top",
        }
      }
    >
      <svg
        className="bpk-nudger__icon bpk-nudger__icon--disabled"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5A1.5 1.5 0 0 0 10.5 3v7.5H3a1.5 1.5 0 0 0 0 3h7.5V21a1.5 1.5 0 0 0 3 0v-7.5H21a1.5 1.5 0 0 0 0-3h-7.5V3A1.5 1.5 0 0 0 12 1.5z"
        />
      </svg>
    </span>
  </button>
</div>
`;
